# classic

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.txt  pytest.ini
src/: CMakeLists.txt  clawdata_module.f90  open_data_file.f90  precision_module.f90  problem_module.f90  solution_mod.f90  solution_mod_redux.f90  solution_mod_simple.f90  solver.f90  test_solution.f90  utility_module.f90  utils.f90
src/1d/: Makefile.classic_1d  b4step1.f  bc1.f  before_step.f90  boundary_conditions.f90  classic.make  classic_1d.make  claw1.f  claw1ez.f  clawdata_module.f90  controller_module.f90  evolve_to_time.f90  geometry_module.f90  hyperbolic_step.f90  limiter.f90  out1.f  qinit.f90  rp1.f  rp1.f90  rp1_interface.f90  set_aux.f90  setaux.f  setprob.f90  solution_module.f90  solver_module.f90  source_term.f90  src1.f  step1.f90
src/2d/: Makefile.classic_2d  abl_module.f90  b4step2.f  bc2.f  classic_2d.make  claw2.f  claw2ez.f  copyq2.f  dimsp2.f  driver.f90  dump2.f  flux2.f90  inlinelimiter.f90  limiter.f90  out2.f  out2_nc.f  qinit.f90  restart2.f  rpn2.f  rpt2.f  setaux.f  src2.f  step2.f90  step2ds.f90  todo.txt
src/3d/: Makefile.classic_3d  b4step3.f  bc3.f  cellave.f  chkmth.f  classic_3d.make  claw3.f  claw3ez.f  copyq3.f  dimsp3.f  driver.f90  fdisc.f  flux3.f90  flux3fw.f90  out3.f  qinit.f90  restart3.f  rpn3.f  rpt3.f  rptt3.f  setaux.f  src3.f  step3.f90  step3ds.f90
src/lib/rp/: rp_swe_module.f90
src/proposed_structure/: Makefile  claw.data  main.f90  rp.data
src/solution/: state_1d_module.f90
src/solver/: evolve.f90  solver_types_module.f90
(+145 files in other folders)
